parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    COMEN

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracaolista
Rule 2     declaracaolista -> declaracaolista declaracao
Rule 3     declaracaolista -> declaracao
Rule 4     declaracao -> vardeclaracao
Rule 5     declaracao -> fundeclaracao
Rule 6     vardeclaracao -> TIPO ID PVIRG
Rule 7     vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG
Rule 8     fundeclaracao -> TIPO ID LPAREN params RPAREN compostodecl
Rule 9     params -> paramlista
Rule 10    params -> empty
Rule 11    paramlista -> paramlista VIRG param
Rule 12    paramlista -> param
Rule 13    param -> TIPO ID
Rule 14    param -> TIPO ID LCOLCH RCOLCH
Rule 15    compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE
Rule 16    localdeclaracoes -> localdeclaracoes vardeclaracao
Rule 17    localdeclaracoes -> empty
Rule 18    statementlista -> statementlista statement
Rule 19    statementlista -> empty
Rule 20    statement -> expressaodecl
Rule 21    statement -> compostodecl
Rule 22    statement -> selecaodecl
Rule 23    statement -> iteracaodecl
Rule 24    statement -> retornodecl
Rule 25    expressaodecl -> expressao PVIRG
Rule 26    expressaodecl -> PVIRG
Rule 27    selecaodecl -> IF LPAREN expressao RPAREN statement
Rule 28    selecaodecl -> IF LPAREN expressao RPAREN statement ELSE statement
Rule 29    iteracaodecl -> WHILE LPAREN expressao RPAREN statement
Rule 30    retornodecl -> RETURN PVIRG
Rule 31    retornodecl -> RETURN expressao PVIRG
Rule 32    expressao -> var EQ expressao
Rule 33    expressao -> simplesexpressao
Rule 34    var -> ID
Rule 35    var -> ID LCOLCH expressao RCOLCH
Rule 36    simplesexpressao -> somaexpressao RELOP somaexpressao
Rule 37    simplesexpressao -> somaexpressao
Rule 38    somaexpressao -> somaexpressao SOMA termo
Rule 39    somaexpressao -> termo
Rule 40    termo -> termo MULT fator
Rule 41    termo -> fator
Rule 42    fator -> LPAREN expressao RPAREN
Rule 43    fator -> var
Rule 44    fator -> ativacao
Rule 45    fator -> NUM
Rule 46    ativacao -> ID LPAREN args RPAREN
Rule 47    args -> arglista
Rule 48    args -> empty
Rule 49    arglista -> arglista VIRG expressao
Rule 50    arglista -> expressao
Rule 51    empty -> <empty>

Terminals, with rules where they appear

COMEN                : 
ELSE                 : 28
EQ                   : 32
ID                   : 6 7 8 13 14 34 35 46
IF                   : 27 28
LCHAVE               : 15
LCOLCH               : 7 14 35
LPAREN               : 8 27 28 29 42 46
MULT                 : 40
NUM                  : 7 45
PVIRG                : 6 7 25 26 30 31
RCHAVE               : 15
RCOLCH               : 7 14 35
RELOP                : 36
RETURN               : 30 31
RPAREN               : 8 27 28 29 42 46
SOMA                 : 38
TIPO                 : 6 7 8 13 14
VIRG                 : 11 49
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

arglista             : 47 49
args                 : 46
ativacao             : 44
compostodecl         : 8 21
declaracao           : 2 3
declaracaolista      : 1 2
empty                : 10 17 19 48
expressao            : 25 27 28 29 31 32 35 42 49 50
expressaodecl        : 20
fator                : 40 41
fundeclaracao        : 5
iteracaodecl         : 23
localdeclaracoes     : 15 16
param                : 11 12
paramlista           : 9 11
params               : 8
programa             : 0
retornodecl          : 24
selecaodecl          : 22
simplesexpressao     : 33
somaexpressao        : 36 36 37 38
statement            : 18 27 28 28 29
statementlista       : 15 18
termo                : 38 39 40
var                  : 32 43
vardeclaracao        : 4 16


state 0

    (0) S' -> . programa
    (1) programa -> . declaracaolista
    (2) declaracaolista -> . declaracaolista declaracao
    (3) declaracaolista -> . declaracao
    (4) declaracao -> . vardeclaracao
    (5) declaracao -> . fundeclaracao
    (6) vardeclaracao -> . TIPO ID PVIRG
    (7) vardeclaracao -> . TIPO ID LCOLCH NUM RCOLCH PVIRG
    (8) fundeclaracao -> . TIPO ID LPAREN params RPAREN compostodecl

    TIPO            shift and go to state 6

    programa                       shift and go to state 1
    declaracaolista                shift and go to state 2
    declaracao                     shift and go to state 3
    vardeclaracao                  shift and go to state 4
    fundeclaracao                  shift and go to state 5

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracaolista .
    (2) declaracaolista -> declaracaolista . declaracao
    (4) declaracao -> . vardeclaracao
    (5) declaracao -> . fundeclaracao
    (6) vardeclaracao -> . TIPO ID PVIRG
    (7) vardeclaracao -> . TIPO ID LCOLCH NUM RCOLCH PVIRG
    (8) fundeclaracao -> . TIPO ID LPAREN params RPAREN compostodecl

    $end            reduce using rule 1 (programa -> declaracaolista .)
    TIPO            shift and go to state 6

    declaracao                     shift and go to state 7
    vardeclaracao                  shift and go to state 4
    fundeclaracao                  shift and go to state 5

state 3

    (3) declaracaolista -> declaracao .

    TIPO            reduce using rule 3 (declaracaolista -> declaracao .)
    $end            reduce using rule 3 (declaracaolista -> declaracao .)


state 4

    (4) declaracao -> vardeclaracao .

    TIPO            reduce using rule 4 (declaracao -> vardeclaracao .)
    $end            reduce using rule 4 (declaracao -> vardeclaracao .)


state 5

    (5) declaracao -> fundeclaracao .

    TIPO            reduce using rule 5 (declaracao -> fundeclaracao .)
    $end            reduce using rule 5 (declaracao -> fundeclaracao .)


state 6

    (6) vardeclaracao -> TIPO . ID PVIRG
    (7) vardeclaracao -> TIPO . ID LCOLCH NUM RCOLCH PVIRG
    (8) fundeclaracao -> TIPO . ID LPAREN params RPAREN compostodecl

    ID              shift and go to state 8


state 7

    (2) declaracaolista -> declaracaolista declaracao .

    TIPO            reduce using rule 2 (declaracaolista -> declaracaolista declaracao .)
    $end            reduce using rule 2 (declaracaolista -> declaracaolista declaracao .)


state 8

    (6) vardeclaracao -> TIPO ID . PVIRG
    (7) vardeclaracao -> TIPO ID . LCOLCH NUM RCOLCH PVIRG
    (8) fundeclaracao -> TIPO ID . LPAREN params RPAREN compostodecl

    PVIRG           shift and go to state 9
    LCOLCH          shift and go to state 10
    LPAREN          shift and go to state 11


state 9

    (6) vardeclaracao -> TIPO ID PVIRG .

    TIPO            reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    $end            reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    RCHAVE          reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    PVIRG           reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    LCHAVE          reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    IF              reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    WHILE           reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    RETURN          reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    ID              reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    LPAREN          reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)
    NUM             reduce using rule 6 (vardeclaracao -> TIPO ID PVIRG .)


state 10

    (7) vardeclaracao -> TIPO ID LCOLCH . NUM RCOLCH PVIRG

    NUM             shift and go to state 12


state 11

    (8) fundeclaracao -> TIPO ID LPAREN . params RPAREN compostodecl
    (9) params -> . paramlista
    (10) params -> . empty
    (11) paramlista -> . paramlista VIRG param
    (12) paramlista -> . param
    (51) empty -> .
    (13) param -> . TIPO ID
    (14) param -> . TIPO ID LCOLCH RCOLCH

    RPAREN          reduce using rule 51 (empty -> .)
    TIPO            shift and go to state 13

    params                         shift and go to state 14
    paramlista                     shift and go to state 15
    empty                          shift and go to state 16
    param                          shift and go to state 17

state 12

    (7) vardeclaracao -> TIPO ID LCOLCH NUM . RCOLCH PVIRG

    RCOLCH          shift and go to state 18


state 13

    (13) param -> TIPO . ID
    (14) param -> TIPO . ID LCOLCH RCOLCH

    ID              shift and go to state 19


state 14

    (8) fundeclaracao -> TIPO ID LPAREN params . RPAREN compostodecl

    RPAREN          shift and go to state 20


state 15

    (9) params -> paramlista .
    (11) paramlista -> paramlista . VIRG param

    RPAREN          reduce using rule 9 (params -> paramlista .)
    VIRG            shift and go to state 21


state 16

    (10) params -> empty .

    RPAREN          reduce using rule 10 (params -> empty .)


state 17

    (12) paramlista -> param .

    VIRG            reduce using rule 12 (paramlista -> param .)
    RPAREN          reduce using rule 12 (paramlista -> param .)


state 18

    (7) vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH . PVIRG

    PVIRG           shift and go to state 22


state 19

    (13) param -> TIPO ID .
    (14) param -> TIPO ID . LCOLCH RCOLCH

    VIRG            reduce using rule 13 (param -> TIPO ID .)
    RPAREN          reduce using rule 13 (param -> TIPO ID .)
    LCOLCH          shift and go to state 23


state 20

    (8) fundeclaracao -> TIPO ID LPAREN params RPAREN . compostodecl
    (15) compostodecl -> . LCHAVE localdeclaracoes statementlista RCHAVE

    LCHAVE          shift and go to state 25

    compostodecl                   shift and go to state 24

state 21

    (11) paramlista -> paramlista VIRG . param
    (13) param -> . TIPO ID
    (14) param -> . TIPO ID LCOLCH RCOLCH

    TIPO            shift and go to state 13

    param                          shift and go to state 26

state 22

    (7) vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .

    TIPO            reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    $end            reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    RCHAVE          reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    PVIRG           reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    LCHAVE          reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    IF              reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    WHILE           reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    RETURN          reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    ID              reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    LPAREN          reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)
    NUM             reduce using rule 7 (vardeclaracao -> TIPO ID LCOLCH NUM RCOLCH PVIRG .)


state 23

    (14) param -> TIPO ID LCOLCH . RCOLCH

    RCOLCH          shift and go to state 27


state 24

    (8) fundeclaracao -> TIPO ID LPAREN params RPAREN compostodecl .

    TIPO            reduce using rule 8 (fundeclaracao -> TIPO ID LPAREN params RPAREN compostodecl .)
    $end            reduce using rule 8 (fundeclaracao -> TIPO ID LPAREN params RPAREN compostodecl .)


state 25

    (15) compostodecl -> LCHAVE . localdeclaracoes statementlista RCHAVE
    (16) localdeclaracoes -> . localdeclaracoes vardeclaracao
    (17) localdeclaracoes -> . empty
    (51) empty -> .

    TIPO            reduce using rule 51 (empty -> .)
    RCHAVE          reduce using rule 51 (empty -> .)
    PVIRG           reduce using rule 51 (empty -> .)
    LCHAVE          reduce using rule 51 (empty -> .)
    IF              reduce using rule 51 (empty -> .)
    WHILE           reduce using rule 51 (empty -> .)
    RETURN          reduce using rule 51 (empty -> .)
    ID              reduce using rule 51 (empty -> .)
    LPAREN          reduce using rule 51 (empty -> .)
    NUM             reduce using rule 51 (empty -> .)

    localdeclaracoes               shift and go to state 28
    empty                          shift and go to state 29

state 26

    (11) paramlista -> paramlista VIRG param .

    VIRG            reduce using rule 11 (paramlista -> paramlista VIRG param .)
    RPAREN          reduce using rule 11 (paramlista -> paramlista VIRG param .)


state 27

    (14) param -> TIPO ID LCOLCH RCOLCH .

    VIRG            reduce using rule 14 (param -> TIPO ID LCOLCH RCOLCH .)
    RPAREN          reduce using rule 14 (param -> TIPO ID LCOLCH RCOLCH .)


state 28

    (15) compostodecl -> LCHAVE localdeclaracoes . statementlista RCHAVE
    (16) localdeclaracoes -> localdeclaracoes . vardeclaracao
    (18) statementlista -> . statementlista statement
    (19) statementlista -> . empty
    (6) vardeclaracao -> . TIPO ID PVIRG
    (7) vardeclaracao -> . TIPO ID LCOLCH NUM RCOLCH PVIRG
    (51) empty -> .

    TIPO            shift and go to state 33
    RCHAVE          reduce using rule 51 (empty -> .)
    PVIRG           reduce using rule 51 (empty -> .)
    LCHAVE          reduce using rule 51 (empty -> .)
    IF              reduce using rule 51 (empty -> .)
    WHILE           reduce using rule 51 (empty -> .)
    RETURN          reduce using rule 51 (empty -> .)
    ID              reduce using rule 51 (empty -> .)
    LPAREN          reduce using rule 51 (empty -> .)
    NUM             reduce using rule 51 (empty -> .)

    statementlista                 shift and go to state 30
    vardeclaracao                  shift and go to state 31
    empty                          shift and go to state 32

state 29

    (17) localdeclaracoes -> empty .

    TIPO            reduce using rule 17 (localdeclaracoes -> empty .)
    RCHAVE          reduce using rule 17 (localdeclaracoes -> empty .)
    PVIRG           reduce using rule 17 (localdeclaracoes -> empty .)
    LCHAVE          reduce using rule 17 (localdeclaracoes -> empty .)
    IF              reduce using rule 17 (localdeclaracoes -> empty .)
    WHILE           reduce using rule 17 (localdeclaracoes -> empty .)
    RETURN          reduce using rule 17 (localdeclaracoes -> empty .)
    ID              reduce using rule 17 (localdeclaracoes -> empty .)
    LPAREN          reduce using rule 17 (localdeclaracoes -> empty .)
    NUM             reduce using rule 17 (localdeclaracoes -> empty .)


state 30

    (15) compostodecl -> LCHAVE localdeclaracoes statementlista . RCHAVE
    (18) statementlista -> statementlista . statement
    (20) statement -> . expressaodecl
    (21) statement -> . compostodecl
    (22) statement -> . selecaodecl
    (23) statement -> . iteracaodecl
    (24) statement -> . retornodecl
    (25) expressaodecl -> . expressao PVIRG
    (26) expressaodecl -> . PVIRG
    (15) compostodecl -> . LCHAVE localdeclaracoes statementlista RCHAVE
    (27) selecaodecl -> . IF LPAREN expressao RPAREN statement
    (28) selecaodecl -> . IF LPAREN expressao RPAREN statement ELSE statement
    (29) iteracaodecl -> . WHILE LPAREN expressao RPAREN statement
    (30) retornodecl -> . RETURN PVIRG
    (31) retornodecl -> . RETURN expressao PVIRG
    (32) expressao -> . var EQ expressao
    (33) expressao -> . simplesexpressao
    (34) var -> . ID
    (35) var -> . ID LCOLCH expressao RCOLCH
    (36) simplesexpressao -> . somaexpressao RELOP somaexpressao
    (37) simplesexpressao -> . somaexpressao
    (38) somaexpressao -> . somaexpressao SOMA termo
    (39) somaexpressao -> . termo
    (40) termo -> . termo MULT fator
    (41) termo -> . fator
    (42) fator -> . LPAREN expressao RPAREN
    (43) fator -> . var
    (44) fator -> . ativacao
    (45) fator -> . NUM
    (46) ativacao -> . ID LPAREN args RPAREN

    RCHAVE          shift and go to state 34
    PVIRG           shift and go to state 42
    LCHAVE          shift and go to state 25
    IF              shift and go to state 43
    WHILE           shift and go to state 45
    RETURN          shift and go to state 46
    ID              shift and go to state 49
    LPAREN          shift and go to state 44
    NUM             shift and go to state 54

    statement                      shift and go to state 35
    expressaodecl                  shift and go to state 36
    compostodecl                   shift and go to state 37
    selecaodecl                    shift and go to state 38
    iteracaodecl                   shift and go to state 39
    retornodecl                    shift and go to state 40
    expressao                      shift and go to state 41
    var                            shift and go to state 47
    simplesexpressao               shift and go to state 48
    somaexpressao                  shift and go to state 50
    termo                          shift and go to state 51
    fator                          shift and go to state 52
    ativacao                       shift and go to state 53

state 31

    (16) localdeclaracoes -> localdeclaracoes vardeclaracao .

    TIPO            reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)
    RCHAVE          reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)
    PVIRG           reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)
    LCHAVE          reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)
    IF              reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)
    WHILE           reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)
    RETURN          reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)
    ID              reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)
    LPAREN          reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)
    NUM             reduce using rule 16 (localdeclaracoes -> localdeclaracoes vardeclaracao .)


state 32

    (19) statementlista -> empty .

    RCHAVE          reduce using rule 19 (statementlista -> empty .)
    PVIRG           reduce using rule 19 (statementlista -> empty .)
    LCHAVE          reduce using rule 19 (statementlista -> empty .)
    IF              reduce using rule 19 (statementlista -> empty .)
    WHILE           reduce using rule 19 (statementlista -> empty .)
    RETURN          reduce using rule 19 (statementlista -> empty .)
    ID              reduce using rule 19 (statementlista -> empty .)
    LPAREN          reduce using rule 19 (statementlista -> empty .)
    NUM             reduce using rule 19 (statementlista -> empty .)


state 33

    (6) vardeclaracao -> TIPO . ID PVIRG
    (7) vardeclaracao -> TIPO . ID LCOLCH NUM RCOLCH PVIRG

    ID              shift and go to state 55


state 34

    (15) compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .

    TIPO            reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    $end            reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    RCHAVE          reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    PVIRG           reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    LCHAVE          reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    IF              reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    WHILE           reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    RETURN          reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    ID              reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    LPAREN          reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    NUM             reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)
    ELSE            reduce using rule 15 (compostodecl -> LCHAVE localdeclaracoes statementlista RCHAVE .)


state 35

    (18) statementlista -> statementlista statement .

    RCHAVE          reduce using rule 18 (statementlista -> statementlista statement .)
    PVIRG           reduce using rule 18 (statementlista -> statementlista statement .)
    LCHAVE          reduce using rule 18 (statementlista -> statementlista statement .)
    IF              reduce using rule 18 (statementlista -> statementlista statement .)
    WHILE           reduce using rule 18 (statementlista -> statementlista statement .)
    RETURN          reduce using rule 18 (statementlista -> statementlista statement .)
    ID              reduce using rule 18 (statementlista -> statementlista statement .)
    LPAREN          reduce using rule 18 (statementlista -> statementlista statement .)
    NUM             reduce using rule 18 (statementlista -> statementlista statement .)


state 36

    (20) statement -> expressaodecl .

    RCHAVE          reduce using rule 20 (statement -> expressaodecl .)
    PVIRG           reduce using rule 20 (statement -> expressaodecl .)
    LCHAVE          reduce using rule 20 (statement -> expressaodecl .)
    IF              reduce using rule 20 (statement -> expressaodecl .)
    WHILE           reduce using rule 20 (statement -> expressaodecl .)
    RETURN          reduce using rule 20 (statement -> expressaodecl .)
    ID              reduce using rule 20 (statement -> expressaodecl .)
    LPAREN          reduce using rule 20 (statement -> expressaodecl .)
    NUM             reduce using rule 20 (statement -> expressaodecl .)
    ELSE            reduce using rule 20 (statement -> expressaodecl .)


state 37

    (21) statement -> compostodecl .

    RCHAVE          reduce using rule 21 (statement -> compostodecl .)
    PVIRG           reduce using rule 21 (statement -> compostodecl .)
    LCHAVE          reduce using rule 21 (statement -> compostodecl .)
    IF              reduce using rule 21 (statement -> compostodecl .)
    WHILE           reduce using rule 21 (statement -> compostodecl .)
    RETURN          reduce using rule 21 (statement -> compostodecl .)
    ID              reduce using rule 21 (statement -> compostodecl .)
    LPAREN          reduce using rule 21 (statement -> compostodecl .)
    NUM             reduce using rule 21 (statement -> compostodecl .)
    ELSE            reduce using rule 21 (statement -> compostodecl .)


state 38

    (22) statement -> selecaodecl .
